	TDO: Fix diagonal jumpers jump lenghts being too high in the mountains (#38).
	TDO: Fix not enough memory issues on MacOS (#39).
	TDO: Fix low framerate in rooms with lots of conveyor belts (#42).
	TDO: Add special characters for key bindings in the dialogue boxes (A, B, X, Y, SELECT, START) (#44).
	TDO: Update the statistics menu with treasures from the Excel file (#46).

Alpha 1.15.2 (//23) "Ladyfish Update": Sprites and images
	TDO: Fix game intro dialogues.
	TDO: Add items treasure and inventory missing dialogues.
	TDO: Fix victory animation not being synchronised with Link movement.
	TDO: Fix wrong dialogue icons.
	TDO: Clean up unused sprite files.
	TDO: Fix Link being invisible after fighting boss (#16).
	TDO: Fix missing animations for other tunics (#47).
	TDO: Center minimap arrows (#49).
	TDO: Update title screen (#50).
	TDO: Modify "field_music_manager" music updating and field map scripts in order not to reset the music on game overs (#48).

Alpha 1.16 (//23) "Mackerel Update": Improvement
	TDO: Add maps.
	TDO: Rename all the soldiers in order to make them appear during the game and not at the beginning.
	TDO: Fix Link being able to run on water right after jumping from a cliff (#18).
	TDO: Add soldiers along the way from the Blacksmith's to Kakarico Village at the beginning to prevent the player from going where he shouldn't.
	TDO: Rename owl entities according to main quest steps (#19).
	TDO: Change the Master Sword sprite on the title screen.
	TDO: Change sword colour on hero (#21).	
	TDO: Progressively switch enemies behaviour to ALTTD'S.
	TDO: Draw the introduction cinematic slides.
	TDO: Clean up dialogues.
	TDO: Fix the Book of Mudora.
	TDO: Slightly change HUD icons.
	TDO: Add a HUD version for timers (#36).

Alpha 1.16.1 (//23) "Mackerel Update": Sprite improvement
	TDO: Unify all the caves' darkness system.
	TDO: Unify all the electrocution systems.
	TDO: Rename the sprites of some NPCs (#23).