@@ -239,7 +239,6 @@ chest{
   x = 160,
   y = 117,
   treasure_name = "piece_of_heart",
-  treasure_savegame_variable = "inside_kakarico_milk_bar_piece_of_heart",
   sprite = "entities/Chests/chest_LttP",
 }
 
