@@ -12,6 +12,24 @@ properties{
 
 tile{
   layer = 0,
+  x = 152,
+  y = 0,
+  width = 16,
+  height = 32,
+  pattern = "floor_low.1-1",
+}
+
+tile{
+  layer = 0,
+  x = 168,
+  y = 16,
+  width = 112,
+  height = 24,
+  pattern = "wall.1-1",
+}
+
+tile{
+  layer = 0,
   x = 16,
   y = 16,
   width = 24,
@@ -50,7 +68,7 @@ tile{
   layer = 0,
   x = 40,
   y = 16,
-  width = 240,
+  width = 112,
   height = 24,
   pattern = "wall.1-1",
 }
@@ -1020,8 +1038,8 @@ tile{
 
 tile{
   layer = 0,
-  x = 208,
-  y = 56,
+  x = 200,
+  y = 48,
   width = 16,
   height = 24,
   pattern = "barrel",
@@ -1029,8 +1047,8 @@ tile{
 
 tile{
   layer = 0,
-  x = 240,
-  y = 72,
+  x = 216,
+  y = 40,
   width = 16,
   height = 24,
   pattern = "barrel",
@@ -1065,8 +1083,8 @@ tile{
 
 tile{
   layer = 0,
-  x = 176,
-  y = 40,
+  x = 184,
+  y = 48,
   width = 16,
   height = 24,
   pattern = "barrel",
@@ -1092,15 +1110,6 @@ tile{
 
 tile{
   layer = 0,
-  x = 152,
-  y = 24,
-  width = 16,
-  height = 16,
-  pattern = "door_stairs.spiral_down.1",
-}
-
-tile{
-  layer = 0,
   x = 64,
   y = 48,
   width = 16,
@@ -1110,16 +1119,7 @@ tile{
 
 tile{
   layer = 0,
-  x = 64,
-  y = 64,
-  width = 16,
-  height = 24,
-  pattern = "barrel",
-}
-
-tile{
-  layer = 0,
-  x = 48,
+  x = 56,
   y = 64,
   width = 16,
   height = 24,
@@ -1130,15 +1130,6 @@ tile{
   layer = 0,
   x = 80,
   y = 48,
-  width = 16,
-  height = 24,
-  pattern = "barrel",
-}
-
-tile{
-  layer = 0,
-  x = 48,
-  y = 80,
   width = 16,
   height = 24,
   pattern = "barrel",
@@ -1396,6 +1387,114 @@ tile{
   pattern = "tub.9",
 }
 
+tile{
+  layer = 0,
+  x = 72,
+  y = 64,
+  width = 16,
+  height = 24,
+  pattern = "barrel",
+}
+
+tile{
+  layer = 0,
+  x = 64,
+  y = 80,
+  width = 16,
+  height = 24,
+  pattern = "barrel",
+}
+
+tile{
+  layer = 0,
+  x = 88,
+  y = 64,
+  width = 16,
+  height = 24,
+  pattern = "barrel",
+}
+
+tile{
+  layer = 0,
+  x = 104,
+  y = 64,
+  width = 16,
+  height = 24,
+  pattern = "barrel",
+}
+
+tile{
+  layer = 0,
+  x = 120,
+  y = 64,
+  width = 16,
+  height = 24,
+  pattern = "barrel",
+}
+
+tile{
+  layer = 0,
+  x = 128,
+  y = 80,
+  width = 16,
+  height = 24,
+  pattern = "barrel",
+}
+
+tile{
+  layer = 0,
+  x = 144,
+  y = 80,
+  width = 16,
+  height = 24,
+  pattern = "barrel",
+}
+
+tile{
+  layer = 0,
+  x = 160,
+  y = 64,
+  width = 16,
+  height = 24,
+  pattern = "barrel",
+}
+
+tile{
+  layer = 0,
+  x = 176,
+  y = 64,
+  width = 16,
+  height = 24,
+  pattern = "barrel",
+}
+
+tile{
+  layer = 0,
+  x = 152,
+  y = 24,
+  width = 16,
+  height = 16,
+  pattern = "door_blast.1",
+}
+
+tile{
+  layer = 0,
+  x = 168,
+  y = 0,
+  width = 24,
+  height = 16,
+  pattern = "wall.4-1",
+}
+
+tile{
+  layer = 0,
+  x = 128,
+  y = 0,
+  width = 24,
+  height = 16,
+  pattern = "wall.3-1",
+}
+
 teletransporter{
   layer = 0,
   x = 152,
@@ -1423,26 +1522,19 @@ destination{
 teletransporter{
   layer = 0,
   x = 152,
-  y = 24,
+  y = 0,
   width = 16,
   height = 16,
-  destination_map = "inside/houses/kakariko/bar_b1",
-}
-
-stairs{
-  layer = 0,
-  x = 152,
-  y = 24,
-  direction = 1,
-  subtype = 1,
+  destination_map = "out/a3",
+  destination = "from_bar_2",
 }
 
 destination{
-  name = "from_b1",
+  name = "from_outside_2",
   layer = 0,
   x = 160,
-  y = 37,
-  direction = 1,
+  y = 53,
+  direction = 3,
 }
 
 dynamic_tile{
@@ -1462,7 +1554,7 @@ door{
   y = 24,
   direction = 1,
   sprite = "entities/Doors/Inside/door_d1_very_weak_wall",
-  savegame_variable = "inside_kakarico_milk_bar_door",
+  savegame_variable = "outside_kakarico_milk_bar_door",
   opening_method = "explosion",
 }
 
@@ -1538,6 +1630,14 @@ destructible{
   can_be_cut = true,
 }
 
+pickable{
+  layer = 0,
+  x = 104,
+  y = 61,
+  treasure_name = "piece_of_heart",
+  treasure_savegame_variable = "inside_kakarico_milk_bar_piece_of_heart",
+}
+
 tile{
   layer = 1,
   x = 152,
@@ -1572,6 +1672,15 @@ tile{
   width = 32,
   height = 8,
   pattern = "book_case.2b",
+}
+
+tile{
+  layer = 1,
+  x = 144,
+  y = 16,
+  width = 32,
+  height = 8,
+  pattern = "door_cache.1-1",
 }
 
 tile{
