@@ -57,7 +57,7 @@ sensor_cutscene:register_event("on_activated", function()
     agahnim_movement_to_position:set_speed(104)
     agahnim_movement_to_position:set_max_distance(104)
     agahnim_movement_to_position:start(npc_agahnim, function()
-      game:start_dialog("maps.houses.north_west.sanctuary.agahnim_1", game:get_player_name(), function()
+      game:start_dialog("maps.houses.north_field.sanctuary.agahnim_1", game:get_player_name(), function()
         local agahnim_movement_to_leave = sol.movement.create("straight")
         agahnim_movement_to_position:set_ignore_obstacles(true)
         agahnim_movement_to_position:set_ignore_suspend(true)
@@ -77,12 +77,12 @@ end)
 dialog:register_event("on_interaction", function()
   map:set_cinematic_mode(true, options)
   hero:freeze()
-  game:start_dialog("maps.houses.north_west.sanctuary.priest_1", game:get_player_name(), function()
+  game:start_dialog("maps.houses.north_field.sanctuary.priest_1", game:get_player_name(), function()
     sol.timer.start(map, 2000, function()
       if game:is_step_last("world_map_obtained") then
         tell_legend()
       elseif game:is_step_last("priest_met") then
-        game:start_dialog("maps.houses.north_west.sanctuary.priest_5", function()
+        game:start_dialog("maps.houses.north_field.sanctuary.priest_5", function()
           return_hero()
         end)
       end
@@ -99,12 +99,12 @@ end
 function tell_legend()
   priest:get_sprite():set_animation("reading")
   priest:get_sprite():set_direction(3)
-  game:start_dialog("maps.houses.north_west.sanctuary.priest_2", function()
+  game:start_dialog("maps.houses.north_field.sanctuary.priest_2", function()
     sol.timer.start(map, 250, function()
-      game:start_dialog("maps.houses.north_west.sanctuary.priest_3", function()
+      game:start_dialog("maps.houses.north_field.sanctuary.priest_3", function()
         sol.timer.start(map, 250, function()
           priest:get_sprite():set_animation("stopped")
-          game:start_dialog("maps.houses.north_west.sanctuary.priest_4", game:get_player_name(), function(answer)
+          game:start_dialog("maps.houses.north_field.sanctuary.priest_4", game:get_player_name(), function(answer)
             if answer == 1 then
               tell_legend()
             else
