@@ -135,7 +135,6 @@ map{ id = "inside/houses/hyrule_town/inn", description = "Hyrule Town Inn" }
 map{ id = "inside/houses/hyrule_town/lost_woods_map_house", description = "Lost Woods Map House" }
 map{ id = "inside/houses/hyrule_town/temple_of_time", description = "Temple of Time" }
 map{ id = "inside/houses/hyrule_town/vase_house", description = "Vase House" }
-map{ id = "inside/houses/kakariko_village/bar_0f", description = "Milk Bar (Ground Floor)" }
 map{ id = "inside/houses/kakariko_village/bar_b1", description = "Milk Bar (Basement 1)" }
 map{ id = "inside/houses/kakariko_village/blind_hideout", description = "Blind Hideout" }
 map{ id = "inside/houses/kakariko_village/chest_house", description = "Chest House" }
@@ -144,6 +143,7 @@ map{ id = "inside/houses/kakariko_village/grandma_house", description = "Grandma
 map{ id = "inside/houses/kakariko_village/graveyard", description = "Graveyard" }
 map{ id = "inside/houses/kakariko_village/library", description = "Library" }
 map{ id = "inside/houses/kakariko_village/mapper_shop", description = "Mapper's Shop" }
+map{ id = "inside/houses/kakariko_village/milk_bar", description = "Milk Bar" }
 map{ id = "inside/houses/kakariko_village/sahasrahla", description = "Sahasrahla House" }
 map{ id = "inside/houses/kakariko_village/shop", description = "Kakarico Shop" }
 map{ id = "inside/houses/kakariko_village/windmill", description = "Windmill" }
