@@ -288,6 +288,7 @@ Alpha 1.15.1 (started 01/01/23) "Ladyfish Update":
 	TDO: Fix low framerate in rooms with lots of conveyor belts (#42).
 	TDO: Add special characters for key bindings in the dialogue boxes (A, B, X, Y, SELECT, START) (#44).
 	TDO: Update the statistics menu with treasures from the Excel file (#46).
+	TDO: Hide Kokiri Village layout in the minimap.
 
 Alpha 1.15.2 (//23) "Ladyfish Update": Sprites and images
 	TDO: Fix game intro dialogues.
